--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".main.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <import type="com.lee.culturalplanner.main.MainViewModel.Event"/>
         <variable
@@ -13,107 +12,126 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".main.MainActivity">
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager_main"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tl_tabLayout" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tl_tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fl_receipt" />
+            app:tabIndicatorHeight="3dp"
+            app:tabBackground="?android:attr/windowBackground">
 
-        <FrameLayout
-            android:id="@+id/fl_receipt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            app:layout_constraintEnd_toStartOf="@id/fl_progress"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent">
-
-            <TextView
-                android:id="@+id/tw_time"
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:lineSpacingExtra="6dp"
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/ti_time"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:onClick="@{()->viewModel.onEventClick(Event.TimeTable.INSTANCE)}"
-                android:paddingStart="4dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="4dp"
-                android:paddingBottom="8dp"
-                android:textSize="14dp"
-                android:textStyle="normal" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/fl_progress"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            app:layout_constraintEnd_toStartOf="@id/fl_complete"
-            app:layout_constraintStart_toEndOf="@id/fl_receipt"
-            app:layout_constraintTop_toBottomOf="parent">
-
-            <TextView
-                android:id="@+id/tw_festival"
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:lineSpacingExtra="6dp"
+                android:icon="@drawable/ic_baseline_calendar_month_24" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/ti_festival"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:onClick="@{()->viewModel.onEventClick(Event.Festival.INSTANCE)}"
-                android:paddingStart="4dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="4dp"
-                android:paddingBottom="8dp"
-                android:textSize="14dp"
-                android:textStyle="normal" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/fl_complete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/fl_progress"
-            app:layout_constraintTop_toBottomOf="parent">
-
-            <TextView
-                android:id="@+id/tw_poimap"
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:lineSpacingExtra="6dp"
+                android:icon="@drawable/ic_baseline_view_list_24" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/ti_poi_map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:onClick="@{()->viewModel.onEventClick(Event.POIMap.INSTANCE)}"
-                android:paddingStart="4dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="4dp"
-                android:paddingBottom="8dp"
-                android:textSize="14dp"
-                android:textStyle="normal" />
-        </FrameLayout>
+                android:icon="@drawable/ic_baseline_map_24" />
+        </com.google.android.material.tabs.TabLayout>
 
+        <!--        <FrameLayout-->
+        <!--            android:id="@+id/fl_receipt"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:padding="12dp"-->
+        <!--            app:layout_constraintEnd_toStartOf="@id/fl_progress"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent">-->
 
-        <!--        <com.google.android.material.tabs.TabItem-->
-        <!--            android:id="@+id/ti_time"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:icon="@drawable/ic_baseline_calendar_month_24" />-->
-        <!--        <com.google.android.material.tabs.TabItem-->
-        <!--            android:id="@+id/ti_festival"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:icon="@drawable/ic_baseline_view_list_24" />-->
+        <!--            <TextView-->
+        <!--                android:id="@+id/tw_time"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:gravity="center"-->
+        <!--                android:lineSpacingExtra="6dp"-->
+        <!--                android:onClick="@{()->viewModel.onEventClick(Event.TimeTable.INSTANCE)}"-->
+        <!--                android:background="@drawable/ic_baseline_calendar_month_24"-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:paddingStart="16dp"-->
+        <!--                android:paddingTop="8dp"-->
+        <!--                android:paddingEnd="16dp"-->
+        <!--                android:paddingBottom="8dp"-->
+        <!--                android:textStyle="normal" />-->
+        <!--        </FrameLayout>-->
 
-        <!--        <com.google.android.material.tabs.TabItem-->
-        <!--            android:id="@+id/ti_poimap"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:icon="@drawable/ic_baseline_map_24" />-->
+        <!--        <FrameLayout-->
+        <!--            android:id="@+id/fl_progress"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:padding="12dp"-->
+        <!--            app:layout_constraintEnd_toStartOf="@id/fl_complete"-->
+        <!--            app:layout_constraintStart_toEndOf="@id/fl_receipt"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent">-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/tw_festival"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:gravity="center"-->
+        <!--                android:lineSpacingExtra="6dp"-->
+        <!--                android:onClick="@{()->viewModel.onEventClick(Event.Festival.INSTANCE)}"-->
+        <!--                android:background="@drawable/ic_baseline_view_list_24"-->
+        <!--                android:paddingStart="16dp"-->
+        <!--                android:paddingTop="8dp"-->
+        <!--                android:paddingEnd="16dp"-->
+        <!--                android:paddingBottom="8dp"-->
+        <!--                android:textSize="14dp"-->
+        <!--                android:textStyle="normal" />-->
+        <!--        </FrameLayout>-->
+
+        <!--        <FrameLayout-->
+        <!--            android:id="@+id/fl_complete"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:padding="12dp"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toEndOf="@id/fl_progress"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent">-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/tw_poimap"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:gravity="center"-->
+        <!--                android:lineSpacingExtra="6dp"-->
+        <!--                android:onClick="@{()->viewModel.onEventClick(Event.POIMap.INSTANCE)}"-->
+        <!--                android:background="@drawable/ic_baseline_map_24"-->
+        <!--                android:paddingStart="16dp"-->
+        <!--                android:paddingTop="8dp"-->
+        <!--                android:paddingEnd="16dp"-->
+        <!--                android:paddingBottom="8dp"-->
+        <!--                android:textSize="14dp"-->
+        <!--                android:textStyle="normal" />-->
+        <!--        </FrameLayout>-->
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
